WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
253887
gcGLSpanDynamicExtent is defined in incorrect header, GCGLSpan.h included in wrong order
https://bugs.webkit.org/show_bug.cgi?id=253887
Summary
gcGLSpanDynamicExtent is defined in incorrect header, GCGLSpan.h included in ...
Kimmo Kinnunen
Reported
2023-03-14 07:33:28 PDT
gcGLSpanDynamicExtent is defined in incorrect header, GCGLSpan.h included in wrong order
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2023-03-14 07:38:41 PDT
<
rdar://problem/106701929
>
Kimmo Kinnunen
Comment 2
2023-03-14 07:41:55 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/11495
Kimmo Kinnunen
Comment 3
2023-04-11 04:58:46 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/12611
EWS
Comment 4
2023-04-12 05:02:30 PDT
Committed
262866@main
(97ca174a5ae5): <
https://commits.webkit.org/262866@main
> Reviewed commits have been landed. Closing PR #12611 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug